2007-05-15  Scott Peterson  <lunchtimemama@gmail.com>
	
	* assign.cs:
	* expression.cs:
	  Imporved object and collection initialization (C# 3.0).

2007-05-15  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #81380
	* expression.cs (Is.DoResolve): Only value types have constant `is´
	behaviour.

2007-05-15  Raja R Harinath  <rharinath@novell.com>

	* statement.cs (ToplevelBlock.child): Remove.

2007-05-15  Raja R Harinath  <harinath@gmail.com>

	Rationalize ResolveMeta: refactoring
	(Block.ResolveMeta): Remove wrong or superfluous comments.  Carve
	out constant handling code into ...
	(Block.DoResolveConstants): ... this.

	Rationalize ResolveMeta: kill local_map
	* statement.cs (Block.local_map, Block.LocalMap): Remove.
	(Block.AssignableSlots): New.
	(Block.ResolveMeta): Make protected.  Don't create a VariableMap
	for locals -- move code from VariableMap here.  Avoid unnecessary
	allocations.
	* flowanalysis.cs (FlowBranching.local_map): Remove.
	(FlowBranching..ctor): Use Block.AssignableSlots.
	(VariableMap): Remove unused constructors.

2007-05-11  Raja R Harinath  <rharinath@novell.com>

	* Makefile [PROFILE=net_2_0_bootstrap]: Add special-case rules.

2007-05-11  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs (IsFriendAssembly): Should not be called for building
	assembly.

2007-05-09  Marek Safar  <marek.safar@gmail.com>

	* literal.cs (NullConstant): Print null in all cases.
	
	* expression.cs (Binary.ResolveOperator): Implemented delegate
	 comparison based on C# 2.0 changes.

2007-04-28  Scott Peterson  <lunchtimemama@gmail.com>

	This code is contributed under the MIT X11 license
	
	The following enables support for several C# 3.0 language features:
	
	* cs-tokenizer.cs: Added support for the "var" keyword.
	
	* ecore.cs: Refactored TypeLookupExpression.DoResolveAsTypeStep().
	  Added VarExpr class to facilitate type inferencing.
	
	* class.cs: Added IDictionary field AnonymousTypes to TypeContainer
	  to support anonymous types.
	